crates/vize_atelier_sfc/tests/snapshots/props_destructure_default_factory__inline.snap
---
source: crates/vize_atelier_sfc/tests/props_destructure_default_factory.rs
expression: result.code.as_str()
---
const { toDisplayString: _toDisplayString, openBlock: _openBlock, createElementBlock: _createElementBlock } = Vue
return {
  __name: "anonymous",
  props: {
    start: {
      type: String,
      required: false,
      default: () => new Date().toISOString()
    },
    id: {
      type: String,
      required: false,
      default: () => crypto.randomUUID()
    },
    items: {
      type: Array,
      required: false,
      default: () => []
    }
  },
  setup(__props) {
    return (_ctx, _cache) => {
      return _openBlock(), _createElementBlock(
        "p",
        null,
        _toDisplayString(__props.start) + " " + _toDisplayString(__props.id) + " " + _toDisplayString(__props.items.length),
        1
        /* TEXT */
      );
    };
  }
};
