crates/vize_atelier_sfc/tests/snapshots/props_destructure_default_factory__separate.snap
---
source: crates/vize_atelier_sfc/tests/props_destructure_default_factory.rs
expression: result.code.as_str()
---
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue";
export default {
  __name: "anonymous",
  props: {
    start: {
      type: String,
      required: false,
      default: () => new Date().toISOString()
    },
    id: {
      type: String,
      required: false,
      default: () => crypto.randomUUID()
    },
    items: {
      type: Array,
      required: false,
      default: () => []
    }
  },
  setup(__props) {
    return (_ctx, _cache) => {
      return _openBlock(), _createElementBlock(
        "p",
        null,
        _toDisplayString(__props.start) + " " + _toDisplayString(__props.id) + " " + _toDisplayString(__props.items.length),
        1
        /* TEXT */
      );
    };
  }
};
